# obs-multistream

./: .gitignore  .gitmodules  CLAUDE.md  README.rst
frontend/: CMakeLists.txt  OBSApp.cpp  OBSApp_Themes.cpp  obs-main.cpp
frontend/api-impl/: frontend_callbacks.cpp  frontend_callbacks.hpp
frontend/cmake/: ui-dialogs.cmake  ui-docks.cmake  ui-settings.cmake  ui-utility.cmake
frontend/cmake/windows/: obs.rc.in
frontend/data/locale/: en-US.ini
frontend/data/themes/: System.obt  Yami.obt  Yami_Light.ovt
frontend/dialogs/: CanvasEditorDialog.cpp  CanvasEditorDialog.hpp  OBSBasicSourceSelect.cpp  OBSBasicSourceSelect.hpp  OBSBasicTransform.cpp  OBSLogViewer.cpp
frontend/docks/: CanvasDock.cpp  CanvasDock.hpp  MultistreamDock.cpp  MultistreamDock.hpp
frontend/forms/: OBSBasicSettings.ui  obs.qrc
frontend/plugin-manager/: PluginManager.cpp
frontend/settings/: OBSBasicSettings.cpp  OBSBasicSettings.hpp  OBSBasicSettings_Canvas.cpp  OBSBasicSettings_Outputs.cpp  OBSBasicSettings_Stream.cpp
frontend/src/: GeneralSettings.cpp  GeneralSettings.hpp  app_icon.hpp  bridge.cpp  bridge.hpp  client.cpp  client.hpp  interact_window.cpp  interact_window.hpp  main.cpp  obf.c  obs_bootstrap.cpp  obs_bootstrap.hpp  preview_window.cpp  preview_window.hpp  projector_window.cpp  projector_window.hpp  properties_serializer.cpp  properties_serializer.hpp  scene_collections.cpp  scene_collections.hpp  scene_persistence.cpp  scene_persistence.hpp  session_log.cpp  session_log.hpp  transitions.cpp  transitions.hpp  tray.cpp  tray.hpp  window_manager.cpp  window_manager.hpp
frontend/src/audio/: AudioMonitor.cpp  AudioMonitor.hpp
frontend/src/chat/: chat_hub.cpp  chat_hub.hpp  kick_chat.cpp  third_party_emotes.cpp  third_party_emotes.hpp  twitch_chat.cpp  twitch_chat.hpp  viewer_poller.cpp  viewer_poller.hpp  youtube_chat.cpp
frontend/src/events/: event_hub.cpp  event_hub.hpp  event_model.hpp  event_store.cpp  event_store.hpp  event_transport.hpp  twitch_events.cpp  twitch_events.hpp  youtube_events.cpp  youtube_events.hpp
frontend/src/mcp/: McpServer.cpp  McpServer.hpp
frontend/src/multistream/: CanvasRuntime.cpp  CanvasRuntime.hpp  CanvasStore.cpp  CanvasStore.hpp  Hotkeys.cpp  Hotkeys.hpp  OutputBindingStore.cpp  OutputBindingStore.hpp  StorePaths.hpp  StreamProfileStore.cpp  StreamProfileStore.hpp
frontend/src/oauth/: device_code.cpp  device_code.hpp  kick_provider.cpp  kick_provider.hpp  provider.hpp  registry.cpp  registry.hpp  token_store.cpp  token_store.hpp  twitch_provider.cpp  twitch_provider.hpp  youtube_provider.cpp  youtube_provider.hpp
frontend/src/overlay/: overlay_selftest.cpp  overlay_server.cpp  overlay_server.hpp  overlay_store.cpp  overlay_store.hpp
frontend/updater/: init-hook-files.c  updater.cpp
frontend/utility/: AdvancedOutput.cpp  AutoUpdateThread.cpp  BasicOutputHandler.cpp  CanvasDefinition.cpp  CanvasDefinition.hpp  CanvasManager.cpp  CanvasManager.hpp  CanvasSceneLink.cpp  CanvasSceneLink.hpp  CrashHandler.cpp  CrashHandler_Windows.cpp  MacUpdateThread.cpp  MultistreamOutput.cpp  MultistreamOutput.hpp  OutputBinding.cpp  OutputBinding.hpp  StreamProfile.cpp  StreamProfile.hpp  StreamProfileManager.cpp  StreamProfileManager.hpp  UndoManager.cpp  UndoManager.hpp  WhatsNewInfoThread.cpp  platform-x11.cpp  scene-item-transform.cpp  scene-item-transform.hpp
frontend/web/: index.html  package.json  spike.html  tsconfig.json  vite.config.ts
frontend/web/public/overlay/default-alertbox/: fields.json  template.css  template.html  template.js
frontend/web/public/overlay/default-chatbox/: fields.json  template.css  template.html  template.js
frontend/web/public/overlay/default-ticker/: fields.json  template.css  template.html  template.js
frontend/web/src/: App.svelte  DetachedApp.svelte  app.css  main.ts
frontend/web/src/lib/: AboutDialog.svelte  AddSourceModal.svelte  AppearanceTab.svelte  AudioMixer.svelte  AudioTab.svelte  BrowserDocksTab.svelte  CanvasEditor.svelte  CanvasesTab.svelte  ContextMenu.svelte  Controls.svelte  EventLog.svelte  FilterDialog.svelte  GeneralTab.svelte  GoLiveFieldInput.svelte  GoLiveModal.svelte  ImporterDialog.svelte  LogViewerDialog.svelte  McpTab.svelte  Menu.svelte  MenuBar.svelte  MissingFilesDialog.svelte  NavRail.svelte  OAuthConnectDialog.svelte  OutputsTab.svelte  PreviewArea.svelte  SceneTransitions.svelte  ScenesPanel.svelte  SettingsModal.svelte  SourcesPanel.svelte  StreamsTab.svelte  ThemeEditor.svelte  Toast.svelte  TopBar.svelte  TransformDialog.svelte  aboutOpener.svelte.ts  bridge.ts  browserDockStore.svelte.ts  clipboardStore.svelte.ts  filterDialogOpener.svelte.ts  importerOpener.svelte.ts  (+11 more)
frontend/web/src/lib/dock/: DockHost.svelte  browserDockReconciler.ts  canvasReconciler.ts  dockRegistry.ts  layoutStore.svelte.ts  mountAdapter.ts  tabRenderer.ts
frontend/web/src/lib/docks/: AudioMixerDock.svelte  BrowserDock.svelte  CanvasDock.svelte  ControlsDock.svelte  EventsDock.svelte  MultichatDock.svelte  MultistreamDock.svelte  PlaceholderDock.svelte  PreviewDock.svelte  ScenesDock.svelte  SourcesDock.svelte  StatsDock.svelte  TransitionsDock.svelte
frontend/web/src/lib/overlays/: CodePane.svelte  FieldsDesigner.svelte
frontend/web/src/lib/pages/: AiPage.svelte  CanvasesPage.svelte  MonitorPage.svelte  OverlaysPage.svelte  SchedulePage.svelte  SettingsPage.svelte  StreamPage.svelte  StreamsPage.svelte  StudioPage.svelte
frontend/web/src/lib/properties/: BoolControl.svelte  ButtonControl.svelte  ColorControl.svelte  EditableListControl.svelte  FontControl.svelte  FrameRateControl.svelte  GroupControl.svelte  ListControl.svelte  (+7 more)
frontend/web/src/overlay/: runtime.ts
frontend/web/src/spike/: SpikeApp.svelte  SpikePreview.svelte  SpikeScenes.svelte  main.ts
frontend/widgets/: OBSBasic.cpp  OBSBasic.hpp  OBSBasicControls.cpp  OBSBasicPreview.cpp  OBSBasicPreview.hpp  OBSBasic_Canvases.cpp  OBSBasic_Hotkeys.cpp  OBSBasic_MainControls.cpp  OBSBasic_OutputHandler.cpp  OBSBasic_Preview.cpp  OBSBasic_Profiles.cpp  OBSBasic_SceneCollections.cpp  OBSBasic_Streaming.cpp  OBSBasic_SysTray.cpp
(+15 files in other folders)
